# redmole

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
.roo/: build.sh  mcp.json
.roo/rules/: rules.md
components/blufi/: CMakeLists.txt
components/blufi/include/: blufi_example.h  blufi_main.h
components/blufi/src/: blufi_init.c  blufi_main.c  blufi_security.c
components/bme280/: CMakeLists.txt  README.md
components/bme280/include/: bme280_hal.h  bme280_module.h
components/bme280/src/: bme280_hal.c
components/bme280/src/hal_internal/: bme280_hal_backend.c  bme280_hal_backend.h  bme280_hal_backend_sim.c
components/board_i2c/: CMakeLists.txt  README.md
components/board_i2c/include/: board_i2c.h
components/board_i2c/src/: board_i2c.c
components/bt/common/btc/profile/esp/blufi/include/: esp_blufi.h
components/bt/common/btc/profile/esp/blufi/nimble_host/: esp_blufi.c
components/event_notify/: CMakeLists.txt  README.md
components/event_notify/include/: rm_event_notify.h
components/event_notify/src/: rm_event_notify.c
components/gpio/: CMakeLists.txt
components/gui/: CMakeLists.txt  Kconfig  README.md
components/gui/docs/: gui_project_map.md  themes.md
components/gui/docs/howto/: create-panel-or-dialog.md  create-settings-card.md  create-theme.md
components/gui/include/: gui_module.h  gui_types.h
components/gui/src/: README.md  gui.c  gui_defs.h  gui_internal.h  gui_module.c  gui_platform.c  gui_platform.h  gui_screen.c  gui_screen.h  gui_state.c  gui_state.h
components/gui/src/control/: gui_control.c  gui_control.h  gui_control_internal.c  gui_control_internal.h  gui_control_model.c  gui_control_wifi.c
components/gui/src/module/: gui_module.c  gui_module_events.c  gui_module_internal.h  gui_module_platform.c  gui_module_runtime.c
components/gui/src/view/: gui_theme_defs.c  gui_theme_defs.h  gui_view.c  gui_view.h  gui_view_common.c  gui_view_common.h
components/gui/src/view/assets/: bonzibuddy_bg.c  deathnote_bg.c  hk_bg.c  hk_bg_night.c  spongebob_bg.c  terminal_bg.c
components/gui/src/view/assets/fonts/: bonzibuddy18.c  bonzibuddy24.c  deathnote20.c  deathnote26.c  hellokitty18.c  hellokitty24.c  spongebob18.c  spongebob24.c  terminal18.c  terminal20.c  terminal24.c  terminal26.c
components/gui/src/view/assets/weather_icons/: README.md  gui_weather_icons.c  gui_weather_icons.h  weather_icons_128.c
components/gui/src/view/panels/: gui_view_bme280_panel.c  gui_view_bme280_panel.h  gui_view_energy_panel.c  gui_view_energy_panel.h  gui_view_forecast_panel.c  gui_view_forecast_panel.h  gui_view_settings_panel.c  gui_view_settings_panel.h
components/http_client/: CMakeLists.txt  Kconfig
components/http_client/include/: http_client.h
components/http_client/src/: http_client.c  http_client_request.c  http_client_tls.c
components/io_extension/: CMakeLists.txt  io_extension.c  io_extension.h
components/local_sensor_service/: CMakeLists.txt  README.md
components/local_sensor_service/include/: local_sensor_service.h
components/local_sensor_service/src/: local_sensor_service.c
components/lvgl_port/: CMakeLists.txt  lvgl_port.h
components/lvgl_port/lvgl__lvgl/src/widgets/: lv_btnmatrix.c
components/mem_alloc/include/: mem_alloc_module.h
components/nac/: CMakeLists.txt  README.md
components/nac/include/: nac.h
components/nac/src/: nac.c
components/nvs/: CMakeLists.txt  README.md
components/nvs/include/: nvs_module.h  rm_nvs.h
components/nvs/src/: rm_nvs.c
components/rgb_lcd_port/: CMakeLists.txt  rgb_lcd_port.c
components/sdcard/: CMakeLists.txt
components/sdcard/include/: sdcard.h  sdcard_log.h
components/sdcard/src/: sdcard.c  sdcard_log.c
components/sensor_data/: CMakeLists.txt  README.md
components/sensor_data/include/: sensor_data.h
components/sensor_data/src/: sensor_data.c
components/server/include/: server_module.h
components/sntp/: CMakeLists.txt
components/sntp/include/: sntp.h
components/sntp/src/: sntp.c
components/system_services/include/: system_services_module.h
components/task_scheduler/: CMakeLists.txt  README.md
components/task_scheduler/include/: task_scheduler.h
components/task_scheduler/src/: task_scheduler.c
components/touch/: CMakeLists.txt  gt911.c  gt911.h
components/uart_diag/: CMakeLists.txt  README.md
components/uart_diag/include/: uart_diag_module.h  uart_mole.h
components/uart_diag/src/: uart_mole.c
components/uart_mole/: README.md
components/uart_mole/include/: uart_mole.h
components/uart_mole/src/: uart_mole.c
components/wifi/: CMakeLists.txt  Kconfig
components/wifi/include/: wifi_module.h
components/wifi/src/: wifi_module.c
docs/: DOXYGEN_STYLE.md  suggestion_codeowners.md
docs/JJ/: EVENT_SYSTEM_BOOTCAMP.md  MEMORY_USAGE_EXPLAINED.md  SENSOR_DATA_MODULE_DESIGN.md  SNAPSHOT_PATTERNS.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/include/: app_gui_bindings.h  app_module.h  defines.h
main/src/: app_gui_bindings.c  app_module.c  blufi_main.c  blufi_main.h
main/src/app_gui_bindings/: app_gui_bindings_internal.h  app_gui_forecast.c  app_gui_leop.c  app_gui_settings_store.c  app_gui_sync.c  app_gui_time.c  app_gui_wifi.c
software/uart_client/: Makefile  README.md  main.c  rmuc
software/uart_client/include/: app.h  protocol.h  serial.h  uart_client.h
software/uart_client/src/: app.c  protocol.c  serial.c  uart_client.c
tools/: clang-format-files.txt  format_files.py
